--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp.rrc-academyofaudit.com
+        server: ftp://118.139.161.199
         username: gukan@rrc-academyofaudit.com
         password: ${{ secrets.FTP_PASSWORD}}
