--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           with:
             username: gukan@rrc-academyofaudit.com
             password: ${{ secrets.FTP_PASSWORD }}
-            server: sftp.rrc-academyofaudit.com
+            server: ftp.rrc-academyofaudit.com
             port: 21
             remote_path: '/home/vc5pu4bz5qhq/public_html'
-            sftp_only: true
+         
